2002-06-04  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-iconv-utils.c (g_mime_iconv_strndup): Pull up past fixes
	from the gmime-1 branch.

2002-06-02  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime.c (g_mime_init): Register the message-part class.

	* gmime-message-part.c: New class for handling message/* subparts.

	* gmime-parser.c (parser_scan_message_part): Handle mime parts of
	type message.
	(parser_construct_leaf_part): Find out if the leaf part is
	actually a message part.

	* gmime-filter-from.c (g_mime_filter_from_new): Now takes a mode
	argument to specify how "From "'s should be protected.
	(filter_filter): If we are to armor the "From " then transform it
	into "=46rom " otherwise transform it into the normal ">From ".

2002-05-31  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime/gmime-stream-cat.c (stream_read): Rewritten to work
	correctly. This was broken worse than I could imagine :-)
	(stream_write): Fix similarly.

2002-05-30  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-cat.c (stream_reset): Same.

	* gmime-stream-file.c (stream_reset): Same.

	* gmime-stream-fs.c (stream_reset): If the stream position is
	already reset, just return 0.

2002-05-23  Jeffrey Stedfast  <fejj@ximian.com>

	* doc/*: Updated documentation.

2002-05-22  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-multipart.c (multipart_write_to_stream): Avoid adding an
	extranious newline character when a preface doesn't exist.

2002-05-20  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-part.c (g_mime_part_set_content_md5): Fix some compiler
	warnings as well as doing some more error handling.
	(g_mime_part_verify_content_md5): Same.

	* md5-utils.c: Removed some compiler warnings.

2002-05-20  Jeffrey Stedfast  <fejj@ximian.com>

	* gmime-stream-cat.c (stream_seek): Return the absolute offset
	into the cat stream rather than the relative offset of one of the
	substreams on success. Fixed a few other things too.
	(stream_read): Fix the logic here so that we never try reading